# multi-agent-llm-governance

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
compliance_guardian/: config.py  main.py
compliance_guardian/agents/: compliance_agent.py  domain_user_extractor.py  output_validator.py  primary_agent.py
compliance_guardian/llm_providers/: base_provider.py  gemini_provider.py  mock_provider.py
compliance_guardian/rules/: finance.json  generic.json  medical.json  scraping.json
compliance_guardian/rules_summary/: finance_summary.json  generic_summary.json  medical_summary.json  scraping_summary.json
compliance_guardian/scripts/: generate_rules_summary.py
compliance_guardian/utils/: env_loader.py  log_writer.py  models.py  predicates.py  rag_indexer.py  risk_scorer.py  rule_loader.py
compliance_guardian/web/: app.py
multi_agent_validator/: __init__.py  correction.py  genre_detector.py  main.py  report_generator.py  validators.py
tests/: test_basic.py  test_compliance_flow.py  test_predicates.py  test_rag_indexer.py  test_rule_loading.py  test_validate.py
